{{$NEXT}}

0.6.7  2021-08-24T08:14:25+12:00
    - protect all parse and validation contexts. These require global
      state setup and are not reentrant or thread-safe.

0.6.6  2021-08-23T13:10:48+12:00
    - Complete porting of t/90threads.t from Perl. This involved adding:
      -- protection locks in setup and finalization stages in
         parsing and validation contexts.
      -- protection locks to push parser methods in LibXML:Parser
    - Add maximum error limit of 100 #61. Configurable via XML::Config.max-errors().
    - Fix LibXML::Text role to W3C::DOM::Text
    - Factor tests into subtests. Remove most 'TODO' test descriptions.

0.6.5  2021-07-15T13:05:19+12:00
    - Fix for #60 type check error on reader values. Reader name() return
      value was erroneously constrained to QName, whereas return value
      could also be '#text', '#comment', etc. Relaxed to Str. Similar
      fix to localName() method to return Str instead of NCName.
    - Work in with LibXML's handling of missing element Declarations. If a
      <!ATTLIST...> is seen without a corresponding <!ELEMENT...> declaration,
      LibXML creates a place-holder record with `etype` 0 (undefined). Change
      LibXML::Dtd::ElementDecl to no longer box and return these.

0.6.4  2021-07-14T16:12:56+12:00
    - Add associative methods to LibXML::Dtd::ElementDecl, including keys(),
      values(), pairs(), AT-KEY)() and Hash

0.6.3  2021-06-17T11:25:31+12:00
    - Fixed t/02parser.t segfault on Rakudo 2020.05.1 introduced in 0.6.1 #59
    - Fixed node over-visitation in reference checking #58
    - Revised document Str and Buf method. :skip-dtd option to copy then
      update the document rather than mutating it.

0.6.2  2021-06-16T13:57:49+12:00
    - Remove entity reference content when a DtD is unlinked
    - Make it illegal to add declaration nodes to the general DOM
    - Add $elem.validate() and $elem.is-valid() methods

0.6.1  2021-06-14T13:16:33+12:00
    - Improved Dtd Handling #30