@@ -1,0 +1,3 @@
+use LibXML;
+use W3C::DOM::Test;
+W3C::DOM::Test::document-basic(LibXML);
